common/infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: squidcode-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - squidcode.xyz
        - api.squidcode.xyz
        - leetcode.squidcode.xyz
      secretName: example-tls
  rules:
    - host: squidcode.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: squidcode-frontend-service
                port:
                  number: 80
    - host: api.squidcode.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: squidcode-backend-service
                port:
                  number: 80
    - host: leetcode.squidcode.xyz
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: squidcode-leetcode-service
              port:
                number: 80
